squash! fix: svg at the bottom of project-item-main , reduced height and padding

--- a/css/output.css
+++ b/css/output.css
@@ -4742,24 +4742,16 @@ html {
   padding-bottom: 2rem;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pt-14 {
-  padding-top: 3.5rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .text-center {
@@ -5827,6 +5819,6 @@ html {
 
 @media (min-width: 1536px) {
   .absolute-wave-at-top {
-    padding-top: 14rem;
+    padding-top: 8rem;
   }
 }
