--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 }
 
 .absolute-wave-at-top {
-  @apply pt-14  2xl:pt-56
+  @apply pt-14  2xl:pt-32
 }
 @layer components {
   .project-item {
